<resources>
    <string name="app_name">t3a3-profe</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_error">Usuario o contraseña incorrectos</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="til_introduce_texto">Introduce el usuario</string>
    <string name="required">Obligatorio\n</string>
    <string name="til_introduce_pass">Introduce la contraseña</string>
    <string name="bank">Bank</string>
    <string name="card_title">Bienvenido/a 20444555S</string>
    <string name="campo_required">Este campo no puede estar vacío.</string>
    <string name="bienvenida">Bienvenido/a a mi banco</string>
    <string name="btnEntrar">Entrar</string>
    <string name="global_position">Posición global</string>
    <string name="movements">Movimientos</string>
    <string name="transfers">Transferencias</string>
    <string name="password">Cambiar contraseña</string>
    <string name="promotions">Promociones</string>
    <string name="atm">Cajeros</string>
    <string name="exit">Salir</string>
    <string name="globalposition_message">Posición Global\n</string>
    <string name="globalposition_tv_accounts">Cuentas:</string>
    <string name="movements_message">Movimientos</string>
    <string name="movements_tv_accounts">Selecciona la cuenta:</string>
    <string name="movements_tv_movements">Últimos movimientos:</string>
    <string name="txtTvRealizarTransferencia">REALIZAR TRANSFERENCIA</string>
    <string name="txtTvCuentaOrigen">Cuenta Origen:</string>
    <string name="txtTvCuentaDestino">Selecciona Cuenta Destino:</string>
    <string name="txtRdBtnCuentaPropia">Cuenta Propia</string>
    <string name="txtTvImporteYDivisa">Importe Y Divisa:</string>
    <string name="txtHintImporte">Importe</string>
    <string name="txtChBox">Enviar Justificante</string>
    <string name="txtChBoxEnviarJustificante">Enviar Justificante</string>
    <string name="txtBtnEnviar">ENVIAR</string>
    <string name="txtBtnCancelar">CANCELAR</string>
    <string name="txtRdBtnCuentaAjena">Cuenta Ajena</string>
    <string name="txtHintCuentaAjena">Cuenta Ajena</string>

    <string-array name="cuentas_array">
        <item>ES12 1234 5678 9012 3456 7890</item>
        <item>ES98 8765 4321 0987 6543 2100</item>
        <item>ES45 1111 2222 3333 4444 5555</item>
        <item>ES45 5555 4444 3333 2222 1111</item>
    </string-array>

    <string-array name="divisas_array">
        <item>EUR (€)</item>
        <item>USD ($)</item>
        <item>GBP (£)</item>
        <item>JPY (¥)</item>
    </string-array>

</resources>